[B]Version 1.7.65[/B]

- Added: freeHDporn
- Updated: eporner
- Added: HD video quality playback

[B]Version 1.7.64[/B]

- Updated: eporner
- Fixed: categories

[B]Version 1.7.63[/B]

- Updated: fapdu
- Fixed: video listing
- Fixed: catcher
- Updated: fucktube
- Fixed: video listing
- Fixed: catcher
- Updated: spankwire
- Fixed: catcher
- Updated: youporn
- Fixed: catcher
- Updated: yuvutu
- Fixed: video url

[B]Version 1.7.62[/B]

- Updated: motherless
- Fixed: url

[B]Version 1.7.61[/B]

- Updated: 4tube
- Fixed: catcher
- Removed: youjizz -> install the addon if you want it

[B]Version 1.7.60[/B]

- Updated: motherless
- Fixed: video listing

[B]Version 1.7.59[/B]

- Updated: motherless
- Fixed: next button
- Updated: xhamster
- Fixed: next button

[B]Version 1.7.58[/B]

- Removed: book-mark.net
- Updated: motherless
- Fixed: video listing
- Updated: pornomovies
- Fixed: video listing
- Updated: slutload
- Fixed: catcher
- Updated: yuvutu
- Fixed: video listing

[B]Version 1.7.57[/B]

- Refactored code

[B]Version 1.7.56[/B]

- Updated: eporner
- Fixed: video listing
- Updated: girlfriendvideos
- Fixed: catcher

[B]Version 1.7.55[/B]

- Updated: xhamster
- Fixed: categories
- Fixed: next button
- Updated: redtube
- Fixed: next button

[B]Version 1.7.54[/B]

- Updated: hardsextube
- Fixed: catcher
- Updated: youjizz
- Fixed: catcher
- Updated: pornhub
- Fixed: catcher
- Added: empflix
- Added: slutload
- Added: tnaflix
- Added: sunporno
- Added: ero-erodouga

[B]Version 1.7.53[/B]

- Removed: pornrabbit
- Removed: youpunish
- Updated: moviesand
- Fixed: video listing
- Fixed: next button
- Updated: 4tube
- Fixed: video listing

[B]Version 1.7.52[/B]

- Updated: gfvideos
- Fixed: video listing
- Updated: xhamster
- Fixed: video listing
- Fixed: catcher


[B]Version 1.7.51[/B]

- Updated: ah-me
- Fixed: video listing
- Fixed: category listing
- Updated: eporner
- Fixed: video listing
- Updated: extremetube
- Fixed: video listing
- Updated: motherless