@@ -6,7 +6,7 @@ catcher=freehdporn.ws
 ########################################################
 # Videos
 ########################################################
-item_infos=href="[^"]+".+?title="([^"]+)"><img src="([^"]+)".+?<iframe src="([^"]+)"
+item_infos=href="[^"]+".+?title=" *([^"]+)"><img src="([^"]+)".+?<iframe class="modal_video" src="([^"]+)"
 item_order=title|icon|url
 item_info_name=title
 item_info_build=%s
@@ -16,7 +16,7 @@ item_url_build=%s
 ########################################################
 # Categories
 ########################################################
-item_infos=<li><a href="([^"]+)"\s{1,2}title="[^"]+">(.+?)</a></li>
+item_infos=<li><a href="([^"]+)">(.+?)</a></li>
 item_order=url|title
 item_skill=directory
 item_info_name=title
@@ -27,7 +27,7 @@ item_url_build=http://freehdporn.ws/%s
 ########################################################
 # Next
 ########################################################
-item_infos=href='(hd_porn.php\?p=\d+)'>Next</a>
+item_infos=href='(hd_porn.php\?p=\d+)'[^>]+>Next[^<]*</a>
 item_order=url
 item_skill=space|lock
 item_info_name=title
